# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "macchiato"
version = "0.0.1"
authors = [{name = "Francisco Fernandez", email = "fernandezfrancisco2195@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "Data-driven nearest-neighbors models to predict physical experiments in silicon-based lithium-ion battery anodes."
keywords = [
    "data-driven-model",
    "nearest-neighbors",
    "clustering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://github.com/fernandezfran/macchiato" }
dependencies = [
    "matplotlib",
    "mdanalysis",
    "numpy",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "importlib_metadata",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["macchiato", "macchiato.*"]
namespaces = false

[tool.black]
line-length = 79
target-version = ["py39"]
